validate_control_groups/lab-as-code-deploy/_manifests/openldap/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ldap
  namespace: ldap
spec:
  serviceName: ldap-service
  replicas: 1
  selector:
    matchLabels:
      app: ldap-service
  template:
    metadata:
      labels:
        app: ldap-service
    spec:
      containers:
      - name: ldap-container
        image: osixia/openldap:latest
        args: ["--copy-service"]  # Correctly pass the --copy-service argument as args
        ports:
        - containerPort: 389
          protocol: TCP
        - containerPort: 636
          protocol: TCP
        volumeMounts:
        - name: certs-dest
          mountPath: /container/service/slapd/assets/certs
        - name: hashibank-ldif
          mountPath: /var/backups/hashibank-data
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "sleep 10 && ldapadd -cxD 'cn=admin,dc=hashibank,dc=com' -w admin -f /var/backups/hashibank-data/hashibank.ldif"]
      - name: phpldapadmin-container
        image: osixia/phpldapadmin:latest
        ports:
        - containerPort: 443
          protocol: TCP
        volumeMounts:
        - name: certs-dest
          mountPath: /container/service/phpldapadmin/assets/apache2/certs
      hostname: ldap-service
      dnsPolicy: ClusterFirst
      volumes:
      - name: certs-source
        secret:
          secretName: ldap-certificate
      - name: certs-dest
        emptyDir: {}
      - name: hashibank-ldif
        configMap:
          name: ldap-data-cm  # ConfigMap containing custom LDIF
