validate_control_groups/lab-as-code-deploy/_manifests/openldap/ldap_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ldap-service
  namespace: ldap
  labels:
    app: ldap-service
spec:
  selector:
    app: ldap-service
  ports:
    - name: ldap
      port: 389
      targetPort: 389
    - name: ldaps
      port: 636
      targetPort: 636
