validate_control_groups/lab-as-code-deploy/_manifests/openldap/phpldapadmin_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpldapadmin-service
  namespace: ldap
  labels:
    app: phpldapadmin
spec:
  type: ClusterIP
  selector:
    app: ldap-service
  ports:
  - name: https
    port: 443
    targetPort: 443
