validate_control_groups/lab-as-code-deploy/_manifests/openldap/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ldap
  namespace: ldap
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: ldap.hashibank.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: phpldapadmin-service
                port:
                  number: 443
  tls:
    - hosts:
        - ldap.hashibank.com
      secretName: ldap-certificate  # Ensure this secret contains the correct certs
